--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "@types/aws-sdk": "^2.7.4",
     "@types/webpack-dev-middleware": "^5.3.0",
+    "aws-sdk": "^2.1692.0",
     "framer-motion": "^12.5.0",
+    "mime-types": "^3.0.1",
     "next": "15.2.3",
     "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-native": "^0.78.1",
-    "react-native-web": "^0.19.13"
+    "react-native": "^0.78.2",
+    "react-native-image-picker": "^8.2.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
     "@eslint/eslintrc": "^3",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-loader": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "typescript": "^5.8.2"
