--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "@google/generative-ai": "^0.24.0",
     "@types/aws-sdk": "^2.7.4",
     "@types/webpack-dev-middleware": "^5.3.0",
