--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/webpack": "^5.28.5",
     "babel-loader": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "webpack": "^5.99.5"
   }
 }
