--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
     "@eslint/eslintrc": "^3",
